[package]
name = "geph5-prototest"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.98"
argh = "0.1.13"
async-event = "0.2.1"
async-io = "2.5.0"
async-io-bufpool = "0.2"
async-native-tls = "0.5.0"
async-trait = "0.1.88"
atomic_float = "1.1.0"
blake3 = "1.8.2"
bytes = "1.10.1"
clap = { version = "4.5.41", features = ["derive"] }
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
fastrand = "2.3.0"
futures-concurrency = "7.6.3"
futures-util = "0.3.31"
hex = "0.4.3"
native-tls = "0.2.14"
once_cell = "1.21.3"
oneshot = "0.1.11"
picomux = { path = "../../libraries/picomux" }
rand = "0.8.5"
rcgen = "0.13.2"
scopeguard = "1.2.0"
serde = "1.0.219"
serde_json = "1.0.141"
sillad = { path = "../../libraries/sillad" }
sillad-conntest = { path = "../../libraries/sillad-conntest" }
sillad-native-tls = { path = "../../libraries/sillad-native-tls" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
sillad-meeklike = { path = "../../libraries/sillad-meeklike" }
sillad-hex = { path = "../../libraries/sillad-hex" }
smol = "2.0.2"
smol-timeout2 = "0.6.1"
smolscale = "0.4.16"
socket2 = "0.5.10"
tachyonix = "0.3.1"
tap = "1.0.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
x25519-dalek = {version="2", default-features=false, features=["serde"]}
geph5-misc-rpc = { path = "../../libraries/geph5-misc-rpc" }
time = "0.3.41"
