[package]
name = "geph5-prototest"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.102"
argh = "0.1.19"
async-event = "0.2.1"
async-io = "2.6.0"
async-io-bufpool = "0.2"
async-native-tls = "0.5.0"
async-trait = "0.1.89"
atomic_float = "1.1.0"
blake3 = "1.8.5"
bytes = "1.11.1"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-queue = "0.3.12"
dashmap = "6.1.0"
fastrand = "2.4.1"
futures-concurrency = "7.7.1"
futures-util = "0.3.32"
hex = "0.4.3"
native-tls = "0.2.18"
once_cell = "1.21.4"
oneshot = "0.1.13"
picomux = { path = "../../libraries/picomux" }
rand = "0.8.6"
rcgen = "0.13.2"
scopeguard = "1.2.0"
serde = "1.0.228"
serde_json = "1.0.149"
sillad = { path = "../../libraries/sillad" }
sillad-conntest = { path = "../../libraries/sillad-conntest" }
sillad-native-tls = { path = "../../libraries/sillad-native-tls" }
sillad-sosistab3 = { path = "../../libraries/sillad-sosistab3" }
sillad-meeklike = { path = "../../libraries/sillad-meeklike" }
sillad-hex = { path = "../../libraries/sillad-hex" }
smol = "2.0.2"
smol-timeout2 = "0.6.1"
smolscale = "0.4.16"
socket2 = "0.5.10"
tachyonix = "0.3.1"
tap = "1.0.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
x25519-dalek = {version="2", default-features=false, features=["serde"]}
geph5-misc-rpc = { path = "../../libraries/geph5-misc-rpc" }
time = "0.3.47"
