[package]
name = "geph5-broker-protocol"
edition = "2024"
description = "Broker protocol for Geph5"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.96"
async-trait = "0.1.86"
nanorpc = "0.1.13"
serde_json = "1.0.139"
thiserror = "2.0.11"
serde = { version = "1.0.218", features = ["derive"] }
bytes = { version = "1.10.0", features = ["serde"] }
ed25519-dalek = { version = "2", default-features = false, features = [
  "serde",
] }
stdcode = "0.1.14"
blake3 = { version = "1.6.1", features = ["serde"] }
isocountry = "0.3.2"
language-tags = { version = "0.3.2", features = ["serde"] }
serde_with = { version = "3.12.0", features = ["hex"] }
mizaru2 = { version = "0.2.7", path = "../mizaru2" }
tracing = "0.1.41"
melpow = "0.1.2"
base64 = "0.22.1"
