[package]
name = "geph5-broker-protocol"
edition = "2021"
description = "Broker protocol for Geph5"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
nanorpc = "0.1.12"
serde_json = "1.0.120"
thiserror = "1.0.61"
serde = { version = "1.0.204", features = ["derive"] }
bytes = { version = "1.6.0", features = ["serde"] }
ed25519-dalek = {version="2", default-features=false, features=["serde"]}
stdcode = "0.1.14"
blake3 = { version = "=1.5.1", features = ["serde"] }
isocountry = "0.3.2"
language-tags = { version = "0.3.2", features = ["serde"] }
serde_with = { version = "3.8.3", features = ["hex"] }
mizaru2 = {version = "0.2.15", path = "../mizaru2" }
tracing = "0.1.40"
melpow = "0.1.1"
base64 = "0.22.1"
olpc-cjson = "0.1.4"
