[package]
name = "geph5-ip-to-asn"
edition = "2024"
description = "Extremely simple IP-to-ASN crate used throughout Geph"
version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.98"
moka = { version = "0.12.10", features = ["future"] }
flate2 = "1.1.2"
reqwest = { version = "0.12.22", default-features = false, features = [
  "rustls-tls",
] }
