[package]
name = "mizaru2"
edition = "2021"
description = "Mizaru2"
version = "0.2.15"
repository.workspace = true
license.workspace = true

[dependencies]
blake3 = { version = "1.5.1", features = ["serde"] }
blind-rsa-signatures = "0.15.1"
rand = "0.8.5"
stdcode = "0.1.14"
serde = { version = "1.0.204", features = ["derive", "rc"] }
thiserror = "1.0.61"
rayon = "1.10.0"
hex = "0.4.3"
