[package]
name = "mizaru2"
edition = "2024"
description = "Mizaru2"
version = "0.2.18"
repository.workspace = true
license.workspace = true

[dependencies]
blake3 = { version = "1.8.5", features = ["serde"] }
blind-rsa-signatures = "0.15.2"
rand = "0.8.6"
stdcode = "0.1.14"
serde = { version = "1.0.228", features = ["derive", "rc"] }
thiserror = "1.0.69"
rayon = "1.12.0"
hex = "0.4.3"
