[package]
name = "nanorpc-sillad"
version = "0.2.0"
edition = "2024"
description = "nanorpc transport over sillad pipes"
repository.workspace = true
license.workspace = true

[dependencies]
sillad = { version = "0.3", path = "../sillad" }
geph5-rt = { version = "0.3", path = "../geph5-rt" }
async-trait = "0.1.89"
nanorpc = "0.1.13"
serde_json = "1.0.149"
thiserror = "1.0.69"
anyhow = "1.0.102"
tokio = { version = "1.52", features = ["io-util"] }
