[package]
name = "sillad-conntest"
edition = "2024"
description = "A connection-testing protocol within the sillad framework"
version = "0.2.0"
repository.workspace = true
license.workspace = true


[dependencies]
async-io = "2.5.0"
async-task = "4.7.1"
async-trait = "0.1.88"
futures-lite = "2.6.0"

futures-util = "0.3.31"
rand = "0.9.2"
sillad = { version = "0.2", path = "../sillad" }
smolscale = "0.4.16"
tachyonix = "0.3.1"
tracing = "0.1.41"
