[package]
name = "sillad-conntest"
edition = "2024"
description = "A connection-testing protocol within the sillad framework"
version = "0.2.2"
repository.workspace = true
license.workspace = true


[dependencies]
async-trait = "0.1.89"
futures-concurrency = "7.7.1"
geph5-rt = { version = "0.1", path = "../geph5-rt" }
rand = "0.9.4"
sillad = { version = "0.2", path = "../sillad" }
tachyonix = "0.3.1"
tokio = { version = "1.52", features = ["io-util", "time"] }
tracing = "0.1.44"
