[package]
name = "sillad-hex"
edition = "2024"
version = "0.1.0"
description = "A silly hex-encoding protocol within the sillad framework"
repository.workspace = true
license.workspace = true

[dependencies]
hex = "0.4.3"
async-trait = "0.1.88"
pin-project = "1.1.10"
futures-util = { version = "0.3.31", features = ["io"] }
sillad = { version = "0.2", path = "../sillad" }
bipe = "0.2.8"
smolscale = "0.4.16"
async-task = "4.7.1"
