[package]
name = "sillad-hex"
edition = "2024"
version = "0.1.1"
description = "A silly hex-encoding protocol within the sillad framework"
repository.workspace = true
license.workspace = true

[dependencies]
hex = "0.4.3"
async-trait = "0.1.89"
pin-project = "1.1.11"
futures-util = { version = "0.3.32", features = ["io"] }
sillad = { version = "0.2", path = "../sillad" }
bipe = "0.2.8"
smolscale = "0.4.16"
async-task = "4.7.1"
