[package]
name = "sillad-hex"
edition = "2024"
version = "0.2.0"
description = "A silly hex-encoding protocol within the sillad framework"
repository.workspace = true
license.workspace = true

[dependencies]
hex = "0.4.3"
async-trait = "0.1.89"
pin-project = "1.1.11"
sillad = { version = "0.3", path = "../sillad" }
geph5-rt = { version = "0.3", path = "../geph5-rt" }
tokio = { version = "1.52", features = ["io-util"] }
