[package]
name = "sillad-meeklike"
edition = "2024"
version = "0.1.2"
description = "A meek-like HTTP polling protocol within the sillad framework"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
async-channel = "1.9.0"
async-compat = "0.2.5"
async-io = "2.6.0"
async-task = "4.7.1"
async-trait = "0.1.89"
base64 = "0.22.1"
bipe = "0.2.8"
blake3 = "1.8.5"
bytes = "1.11.1"
chacha20poly1305 = {version="0.10.1", features=["reduced-round"]}
dashmap = "5.5.3"
event-listener = "5.4.1"
futures-lite = "2.6.1"
futures-util = { version = "0.3.32", features = ["io"] }
hex = "0.4.3"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["http1", "client", "server"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
parking_lot = "0.12.5"
pin-project = "1.1.11"
rand = "0.8.6"
scopeguard = "1.2.0"
serde = { version = "1", features = ["derive"] }
sillad = { version = "0.2", path = "../sillad" }
smol-timeout2 = "0.6.1"
smolscale = "0.4.16"
stdcode = "0.1.14"
tracing = "0.1.44"
virta = "0.1.2"
