[package]
name = "sillad-native-tls"
edition = "2024"
version = "0.2.11"
description = "A native-tls wrapper within the sillad framework"
repository.workspace = true
license.workspace = true

[dependencies]
async-native-tls = "0.5.0"
async-trait = "0.1.88"
futures-lite = "2.6.0"
sillad = { version = "0.2", path = "../sillad" }
native-tls={version="0.2", features=["vendored"]}
tracing = "0.1.41"
tachyonix = "0.3.1"
smolscale = "0.4.16"
async-task = "4.7.1"
