[package]
name = "sillad-native-tls"
edition = "2024"
version = "0.2.14"
description = "A native-tls wrapper within the sillad framework"
repository.workspace = true
license.workspace = true

[dependencies]
async-native-tls = "0.5.0"
async-trait = "0.1.89"
futures-lite = "2.6.1"
sillad = { version = "0.2", path = "../sillad" }
native-tls={version="0.2.18", features=["vendored"]}
tracing = "0.1.44"
tachyonix = "0.3.1"
smolscale = "0.4.16"
async-task = "4.7.1"
