[package]
name = "sillad-sosistab3"
edition = "2021"
description = "A scramblesuit-like obfuscation protocol within the sillad framework"
version = "0.2.11"
repository.workspace = true
license.workspace = true

[dependencies]
arrayref = "0.3.9"
blake3 = "1.8.2"
chacha20poly1305 = "0.10.1"
rand = "0.8.5" 
x25519-dalek = {version="2", default-features=false, features=["serde"]}
sillad = { version = "0.2", path = "../sillad" }
futures-util = { version = "0.3.31", features = ["io"] }
pin-project = "1.1.10"
smallvec = "1.15.1"
async-trait = "0.1.88"
tap = "1.0.1"
tracing = "0.1.41"
smolscale = "0.4.16"
async-task = "4.7.1"
async-executor = "1.13.2"
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
async-io = "2.5.0"
anyhow = "1.0.98"
tachyonix = "0.3.1"
once_cell = "1.21.3"
serde_json = "1.0.141"
bipe = "0.2.8"
