[package]
name = "sillad-sosistab3"
edition = "2024"
description = "A scramblesuit-like obfuscation protocol within the sillad framework"
version = "0.2.17"
repository.workspace = true
license.workspace = true

[dependencies]
arrayref = "0.3.9"
blake3 = "1.8.5"
chacha20poly1305 = "0.10.1"
rand = "0.8.6" 
x25519-dalek = {version="2", default-features=false, features=["serde"]}
sillad = { version = "0.2", path = "../sillad" }
futures-util = { version = "0.3.32", features = ["io"] }
pin-project = "1.1.11"
smallvec = "1.15.1"
async-trait = "0.1.89"
tap = "1.0.1"
tracing = "0.1.44"
smolscale = "0.4.16"
async-task = "4.7.1"
async-executor = "1.14.0"
serde = { version = "1.0.228", features = ["derive"] }
hex = "0.4.3"
async-io = "2.6.0"
anyhow = "1.0.102"
tachyonix = "0.3.1"
once_cell = "1.21.4"
serde_json = "1.0.149"
bipe = "0.2.8"
futures-concurrency = "7.7.1"

[dev-dependencies]
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
