[package]
name = "sillad"
edition = "2024"
description = "A framework for talking about TCP-like dialers and listeners, within the tokio-io ecosystem"
version = "0.2.10"
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
futures-concurrency = "7.7.1"
futures-util = "0.3.32"
libc = "0.2.186"
pin-project = "1.1.11"
rand = "0.8.6"
socket2 = "0.5.10"
tokio = { version = "1.52", features = ["net", "time", "io-util"] }
tracing = "0.1.44"
